--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" type="text/css" href="https://miro.com/app/static/styles.1.0.css"/>
     <!--<script type="text/javascript" src="https://miro.com/app/static/sdk.1.1.js"></script> -->
     <script src="https://miro.com/app/static/sdk/v2/miro.js"></script>
-    <script defer src='/bundle.js'></script>
+    <script defer src='./bundle.js'></script>
 </head>
 </html>
