--- a/frontend/public/panel.html
+++ b/frontend/public/panel.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <div id="container"></div>
-    <script src='/panel.js'></script>
+    <script src='./panel.js'></script>
 </body>
 </html>
