--- a/frontend/public/tracker.html
+++ b/frontend/public/tracker.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <div id="container2"></div>
-    <script src='/tracker.js'></script>
+    <script src='./tracker.js'></script>
 </body>
 </html>
